Append photos, bg images

--- a/views/herci.haml
+++ b/views/herci.haml
@@ -34,47 +34,41 @@
     %li
       %a{:href => "javascript:changeActor('Magnusek');"} Tomáš Magnusek
     %li
-      %a{:href => "javascript:changeActor('Bukova');"} Ivana Buková
+      %a{:href => "javascript:changeActor('Svobodova');"} Ilona Svobodová
     %li
-      %a{:href => "javascript:changeActor('Potmesil');"} Ladislav Potměšil
+      %a{:href => "javascript:changeActor('Preucil');"} Jan Přeučil
     %li
-      %a{:href => "javascript:changeActor('Sulcova');"} Jana Šulcová
+      %a{:href => "javascript:changeActor('Obermaierova');"} Jaroslava Obermaierová
+    %li
+      %a{:href => "javascript:changeActor('Brozova');"} Kateřina Brožová
+    %li
+      %a{:href => "javascript:changeActor('Zavrel');"} Vlastimil Zavřel
+    %li
+      %a{:href => "javascript:changeActor('Triska');"} Jan Tříska
+    %li
+      %a{:href => "javascript:changeActor('Censky');"} Jan Čenský
+    %li
+      %a{:href => "javascript:changeActor('Hrusinsky');"} Rudolf Hrušínský
+    %li
+      %a{:href => "javascript:changeActor('Topfer');"} Tomáš Töpfer
+    %li
+      %a{:href => "javascript:changeActor('Krampol');"} Jiří Krampol
+    %li
+      %a{:href => "javascript:changeActor('Milbauer');"} Michal Milbauer
+    %li
+      %a{:href => "javascript:changeActor('Janeckova');"} Kateřina Janečková
     %li
       %a{:href => "javascript:changeActor('Dolansky');"} David Dolanský
     %li
       %a{:href => "javascript:changeActor('Koutny');"} Patrik Koutný
     %li
-      %a{:href => "javascript:changeActor('Leichtova');"} Kristýna Leichtová
-    %li
       %a{:href => "javascript:changeActor('Semerak');"} Ondřej Semerák
     %li
-      %a{:href => "javascript:changeActor('Cizkovska');"} Eva Čížkovská
+      %a{:href => "javascript:changeActor('Vyskocil');"} Ivan Vyskočil
     %li
-      %a{:href => "javascript:changeActor('Hajicek');"} Tomáš Hajíček
+      %a{:href => "javascript:changeActor('Demeter');"} Josef Deméter
     %li
-      %a{:href => "javascript:changeActor('Preucil');"} Jan Přeučil
-    %li
-      %a{:href => "javascript:changeActor('Poloczek');"} Bronislav Poloczek
-    %li
-      %a{:href => "javascript:changeActor('Stastny');"} Jan Šťastný
-    %li.smaller
-      %a{:href => "javascript:changeActor('Rytmus');"} Patrik "Rytmus" Vrbovský
-    %li
-      %a{:href => "javascript:changeActor('Obermaierova');"} Jaroslava Obermaierová
-    %li
-      %a{:href => "javascript:changeActor('Hanusova');"} Jaroslava Hanušová
-    %li
-      %a{:href => "javascript:changeActor('Hemala');"} Alexandr Hemala
-    %li
-      %a{:href => "javascript:changeActor('Holub');"} Radek Holub
-    %li
-      %a{:href => "javascript:changeActor('Cimicky');"} Jan Cimický
-    %li
-      %a{:href => "javascript:changeActor('Rasilov');"} Saša Rašilov
-    %li
-      %a{:href => "javascript:changeActor('Deti');"} děti
-    %li
-      %a{:href => "javascript:changeActor('Bohdanova');"} Blanka Bohdanová
+      %a{:href => "javascript:changeActor('dalsi');"} dále hrají
 
 %table#actorDetail
   %tr
