--- a/views/o_filmu.haml
+++ b/views/o_filmu.haml
@@ -11,4 +11,4 @@
 .image
   .o_filmu
     %img{:src => "/o_filmu/o_filmu2.jpg"}
-%p Film vychází z autorova dlouholetého působení v základním školství, kde čerpal inspiraci pro drsný příběh o dětech ze sociálně vyloučených lokalit. Film pojednává o brutální vraždě mladé praktikantky, kterou mají na svědomí právě tři chlapci z jedné základní školy. Záhy zjišťujeme, že vymahatelnost práva u mladistvých pachatelů je téměř nulová, takže někdo musí vzít spravedlnost do svých rukou...
+%p Učitel Tomáš Majer, který v roce 2010 do jedné bývalé zvláštní školy zmizel. Do školy přišel několik měsíců poté, co byla zavražděna jeho sestra Jana, rovněž učitelka. Ve školních roce záhadně zemřeli kluci, jež Janu Majerovou zavraždili. Tomáš Majer tak svoji sestru s největší pravděpodobností chladnokrevně pomstil. Je to v pořádku? Dopadne ho policie? Bude soud? Co na to rodiče dětí? Rodiče Tomáše Majera? Společnost? Co se bude dít, když se podobné školy zruší. Poslední a nejodvážnější díl Bastardů vstoupí do kin v září 2012.
