--- a/views/z_nataceni.haml
+++ b/views/z_nataceni.haml
@@ -16,50 +16,20 @@
   });
 #image_gallery
   .photo
-    %a{:href => "/z_nataceni/foto1.jpg", :rel => "fancy"}
-      %img{:src => "/z_nataceni/foto1_small.jpg"}
+    %a{:href => "/z_nataceni/foto_01.jpg", :rel => "fancy"}
+      %img{:src => "/z_nataceni/foto_01_small.jpg"}
   .photo
-    %a{:href => "/z_nataceni/foto2.jpg", :rel => "fancy"}
-      %img{:src => "/z_nataceni/foto2_small.jpg"}
+    %a{:href => "/z_nataceni/foto_02.jpg", :rel => "fancy"}
+      %img{:src => "/z_nataceni/foto_02_small.jpg"}
   .photo
-    %a{:href => "/z_nataceni/foto3.jpg", :rel => "fancy"}
-      %img{:src => "/z_nataceni/foto3_small.jpg"}
+    %a{:href => "/z_nataceni/foto_03.jpg", :rel => "fancy"}
+      %img{:src => "/z_nataceni/foto_03_small.jpg"}
   .photo
-    %a{:href => "/z_nataceni/foto4.jpg", :rel => "fancy"}
-      %img{:src => "/z_nataceni/foto4_small.jpg"}
+    %a{:href => "/z_nataceni/foto_04.jpg", :rel => "fancy"}
+      %img{:src => "/z_nataceni/foto_04_small.jpg"}
   .photo
-    %a{:href => "/z_nataceni/foto5.jpg", :rel => "fancy"}
-      %img{:src => "/z_nataceni/foto5_small.jpg"}
+    %a{:href => "/z_nataceni/foto_05.jpg", :rel => "fancy"}
+      %img{:src => "/z_nataceni/foto_05_small.jpg"}
   .photo
-    %a{:href => "/z_nataceni/foto6.jpg", :rel => "fancy"}
-      %img{:src => "/z_nataceni/foto6_small.jpg"}
-  .photo
-    %a{:href => "/z_nataceni/foto7.jpg", :rel => "fancy"}
-      %img{:src => "/z_nataceni/foto7_small.jpg"}
-  .photo
-    %a{:href => "/z_nataceni/foto8.jpg", :rel => "fancy"}
-      %img{:src => "/z_nataceni/foto8_small.jpg"}
-  .photo
-    %a{:href => "/z_nataceni/foto9.jpg", :rel => "fancy"}
-      %img{:src => "/z_nataceni/foto9_small.jpg"}
-  .photo
-    %a{:href => "/z_nataceni/foto10.jpg", :rel => "fancy"}
-      %img{:src => "/z_nataceni/foto10_small.jpg"}
-  .photo
-    %a{:href => "/z_nataceni/foto11.jpg", :rel => "fancy"}
-      %img{:src => "/z_nataceni/foto11_small.jpg"}
-  .photo
-    %a{:href => "/z_nataceni/foto12.jpg", :rel => "fancy"}
-      %img{:src => "/z_nataceni/foto12_small.jpg"}
-  .photo
-    %a{:href => "/z_nataceni/foto13.jpg", :rel => "fancy"}
-      %img{:src => "/z_nataceni/foto13_small.jpg"}
-  .photo
-    %a{:href => "/z_nataceni/foto14.jpg", :rel => "fancy"}
-      %img{:src => "/z_nataceni/foto14_small.jpg"}
-  .photo
-    %a{:href => "/z_nataceni/foto15.jpg", :rel => "fancy"}
-      %img{:src => "/z_nataceni/foto15_small.jpg"}
-  .photo
-    %a{:href => "/z_nataceni/foto16.jpg", :rel => "fancy"}
-      %img{:src => "/z_nataceni/foto16_small.jpg"}
+    %a{:href => "/z_nataceni/foto_06.jpg", :rel => "fancy"}
+      %img{:src => "/z_nataceni/foto_06_small.jpg"}
