--- a/views/layout.haml
+++ b/views/layout.haml
@@ -32,13 +32,10 @@
         .flash= flash[:notice]
       .actorPhoto
       .slideshow
-        %img{:src=> "/background/Still0519_00046.jpg", :width => "1200", :height => "675", :alt => "Pozadí - Bastardi"}
-        %img{:src=> "/background/Still0519_00001.jpg", :width => "1200", :height => "675", :alt => "Pozadí - Ladislav Potměšil"}
-        %img{:src=> "/background/Still0519_00005.jpg", :width => "1200", :height => "675", :alt => "Pozadí - Eva Čížkovská"}
-        %img{:src=> "/background/Still0519_00024.jpg", :width => "1200", :height => "675", :alt => "Pozadí - David Dolanský"}
-        %img{:src=> "/background/Still0519_00028.jpg", :width => "1200", :height => "675", :alt => "Pozadí - Tomáš Magnusek"}
-        %img{:src=> "/background/Still0519_00033.jpg", :width => "1200", :height => "675", :alt => "Pozadí - Kristýna Leichtová"}
-        %img{:src=> "/background/Still0519_00064.jpg", :width => "1200", :height => "675", :alt => "Pozadí - Pohřeb"}
+        %img{:src=> "/background/screen_01.jpg", :width => "1200", :height => "675", :alt => "Pozadí - Zásahovka"}
+        %img{:src=> "/background/screen_02.jpg", :width => "1200", :height => "675", :alt => "Pozadí - Pád"}
+        %img{:src=> "/background/screen_03.jpg", :width => "1200", :height => "675", :alt => "Pozadí - Zásahovka 2"}
+        %img{:src=> "/background/screen_04.jpg", :width => "1200", :height => "675", :alt => "Pozadí - Záběr z filmu"}
 
       #content-filter
         #content-box
