--- a/views/tvurci.haml
+++ b/views/tvurci.haml
@@ -1,5 +1,5 @@
 - title "Bastardi - Tvůrci českého filmu"
-- description "Tomáš Magnusek, Petr Šícha, Jan Lengyel, Antonín Žovinec, Ivana Buková"
+- description "Tomáš Magnusek, Milan Hodek, Wek Mack"
 :javascript
   $(document).ready(function() {
     _typeface_js.renderDocument();
@@ -9,28 +9,19 @@
   %h2 Tomáš Magnusek
   .image_background
     %img{:src => "/tvurci/Magnusek.jpg"}
+  %h3 režisér a scénárista
   %p Vystudovaný speciální pedagog se narodil 7. 7. 1984 v Náchodě. Je autorem knih Stateční Češi, Ještě jsme tady…, Pamětnice a scénáře ke stejnojmennému ﬁlmu, ve kterém také hrál společně s Libuší Švormovou hlavní roli. Snímek Bastardi je jeho druhým filmem, na němž se podílí jako scénárista, herec a částečně jako producent.
 
 .tvurci
-  %h2 Petr Šícha
+  %h2 Milan Hodek
   .image_background
-    %img{:src => "/tvurci/Sicha.jpg"}
-  %p Režisér Petr Šícha se narodil 29. 1. 1954 v Praze. Je synem herečky Niny Jiránkové. Režijně debutoval v roce 1978 ﬁlmem Zvyk. Je režisérem ﬁlmů Silnější než já, Přátelé Bermudského trojúhelníku a televizních ﬁlmů Den D Dáši B a Řetězová reakce.
+    %img{:src => "/tvurci/Hodek.jpg"}
+  %h3 kameraman
+  %p Dlouholetý spolupracovník Jana Lengyela v rámci společnosti Pegasfilm s.r.o. Společně s Honzou připravuje Milan Hodek také snímek Nelítostně a rovněž z pozice hlavního kameramana.
 
 .tvurci
-  %h2 Jan Lengyel
+  %h2 Wek Mack
   .image_background
-    %img{:src => "/tvurci/Lengyel.jpg"}
-  %p Jan Lengyel se narodil v Praze 5. 1. 1980 a profesionálně se ﬁlmové práci začal věnovat v roce 1998, kdy založil studio Pegasﬁlm. Vystudoval obor kameraman na SV OŠF v Písku.
-
-.tvurci
-  %h2 Antonín Žovinec
-  .image_background
-    %img{:src => "/tvurci/Zovinec.jpg"}
-  %p Antonín Žovinec se narodil v Berouně 10. 4. 1981. Vystudoval SVOŠF v Písku, kterou ukončil 2004. Od ukončení studia pracuje pro ﬁrmu Pegasﬁlm a v průběhu své dosavadní kariéry se věnoval především tvorbě krátkometrážních ﬁlmů, komerčním projektům a propagační tvorbě. Film Bastardi je jeho prvním celovečerním projektem.
-
-.tvurci
-  %h2 Ivana Buková
-  .image_background
-    %img{:src => "/tvurci/Bukova.jpg"}
-  %p Ivana Buková se narodila 5. 1. 1968 v Lounech a vystudovala konzervatoř a průmyslovou školu oděvní v Praze. Ve svém životě se věnuje divadlu, hudbě, zvlášť šansonu a produkci - Noc s Andělem, Musím Tě svést, Love story, Bathory a dalším. Je zakladatelkou společnosti Český Nezávislý Film.
+    %img{:src => "/tvurci/Mack.jpg"}
+  %h3 hudební skladatel
+  %p 
