--- a/views/index.haml
+++ b/views/index.haml
@@ -13,8 +13,10 @@
     %script{:src => "javascripts/intro.js", :type => "text/javascript"}
     %script{:src => "javascripts/application.js", :type => "text/javascript"}
   %body
-    %h1#skip_intro{:style => "text-align: center;"} Web Bastardi 3 bude spuštěn již za týden.
     #video
       %a#player{:href => "trailer2.mp4"}
-      %a#skip_intro{:href => "o_filmu.html"} Bastardi
+      %a#skip_intro{:href => "web.html"} Přeskočit
+      %br
+      %br
+      %a#skip_intro{:href => "http://www.filmbastardi.cz/web.html", :style => { :'margin-left:' =>  '20px;'}} Bastardi
       %a#skip_intro{:href => "http://www.bastardi2.cz/web.html", :style => { :'margin-left:' =>  '20px;'}} Bastardi2
