--- a/views/tvurci.haml
+++ b/views/tvurci.haml
@@ -5,23 +5,16 @@
     _typeface_js.renderDocument();
   });
 
-.tvurci
-  %h2 Tomáš Magnusek
-  .image_background
-    %img{:src => "/tvurci/Magnusek.jpg"}
-  %h3 režisér a scénárista
-  %p Vystudovaný speciální pedagog se narodil 7. 7. 1984 v Náchodě. Je autorem knih Stateční Češi, Ještě jsme tady…, Pamětnice a scénáře ke stejnojmennému ﬁlmu, ve kterém také hrál společně s Libuší Švormovou hlavní roli. Snímek Bastardi je jeho druhým filmem, na němž se podílí jako scénárista, herec a částečně jako producent.
-
-.tvurci
-  %h2 Milan Hodek
-  .image_background
-    %img{:src => "/tvurci/Hodek.jpg"}
-  %h3 kameraman
-  %p Dlouholetý spolupracovník Jana Lengyela v rámci společnosti Pegasfilm s.r.o. Společně s Honzou připravuje Milan Hodek také snímek Nelítostně a rovněž z pozice hlavního kameramana.
-
-.tvurci
-  %h2 Wek Mack
-  .image_background
-    %img{:src => "/tvurci/Mack.jpg"}
-  %h3 hudební skladatel
-  %p 
+%table.tvurci
+  %tr
+    %th Režie, scénář, střih
+    %td :
+    %td Tomáš Magnusek
+  %tr
+    %th Kamera, střih
+    %td :
+    %td Milan Hodek
+  %tr
+    %th Hudba
+    %td :
+    %td Wek Mack, Michal Dvořáček, Tomáš Kahl
