--- a/views/partneri.haml
+++ b/views/partneri.haml
@@ -4,8 +4,46 @@
   $(document).ready(function() {
     _typeface_js.renderDocument();
   });
-%h2.partner_section Generální partner
-%br
 %h2.partner_section Partneři
-%br
-%h2.partner_section Mediální partneři
+%ul.partners
+  %li
+    %a{:href => 'http://www.motelskalka.cz'} Motel Skalka
+  %li
+    %a{:href => 'http://www.gurmania-pruhonice.cz'} Restaurace Gurmania
+  %li
+    %a{:href => 'http://www.mandisan.cz'} Mandisan
+  %li
+    %a{:href => 'http://www.penzion-klidek.cz'} Penzion Klídek
+  %li
+    %a{:href => 'http://www.eurona.cz'} Eurona, s r. o.
+  %li
+    %a{:href => '#'} Zahradnictví Roušar
+  %li
+    %a{:href => 'http://www.dentimed.cz'} Dentimed, s. r. o.
+  %li
+    %a{:href => 'http://www.rpvl.cz'} Papírnictví Šubert, s. r. o. Náchod
+  %li
+    %a{:href => 'http://www.peko-pekarna.cz'} PEKO spol. s r. o.
+  %li
+    %a{:href => '#'} Řeznictví a uzenářství Vítek
+  %li
+    %a{:href => 'http://www.promareha.cz'} Proma Reha s. r. o.
+%ul.partners
+  %li
+    %a{:href => 'http://www.cdsnachod.cz'} CDS Náchod s. r. o., Náchod
+  %li
+    %a{:href => 'http://www.hsflamingo.cz'} HS Flamingo s. r. o.
+  %li
+    %a{:href => 'http://www.svetluska.cz'} Světluška, s r. o.
+  %li
+    %a{:href => 'http://firma.kofola.cz'} Kofola a. s.
+  %li
+    %a{:href => 'http://www.umago.cz'} Ubytování v soukromí na samotě – Milan Magnusek
+  %li
+    %a{:href => '#'} Nadační fond Ing. Petra Pakosty
+  %li
+    %a{:href => '#'} Poslankyně Soňa Marková
+  %li
+    %a{:href => '#'} Šárka a Jan Birke
+  %li
+    %a{:href => '#'} Železářství Soukup
