Use HD facebook trailer

--- a/public/styles/intro.css
+++ b/public/styles/intro.css
@@ -7,14 +7,13 @@ body{
 }
 #video{
   margin: auto;
-  width: 640px;
+  width: 720px;
   text-align: center;
 }
 #player{
-  margin-bottom: 20px;
-  display: block;
-  width: 640px;
-  height: 360px;
+  width: 716px;
+  height: 403px;
+  margin: 20px 0;
 }
 #skip_intro{
   text-transform: uppercase;
