--- a/views/layout.haml
+++ b/views/layout.haml
@@ -9,10 +9,10 @@
 
     <!--[if IE]>
     %link{:rel => "stylesheet", :type => "text/css", :href => "/ie.css"}
-    <![endif]--> 
+    <![endif]-->
     <!--[if IE 6]>
     %link{:rel => "stylesheet", :type => "text/css", :href => "/ie6.css"}
-    <![endif]--> 
+    <![endif]-->
     <!--[if IE 7]>
     %link{:rel => "stylesheet", :type => "text/css", :href => "/ie7.css"}
     <![endif]-->
@@ -51,12 +51,14 @@
               %a#o_filmu_link.typeface-js{:href => "/o_filmu.html"} O filmu
             %li
               %a#eshop_link.typeface-js{:href => "/eshop.html"} Eshop
-            %li              
+            %li
               %a#herci_link.typeface-js{:href => "/herci.html"} Herci
             %li
               %a#z_nataceni_link.typeface-js{:href => "/z_nataceni.html"} Z natáčení
             %li
               %a#tvurci_link.typeface-js{:href => "/tvurci.html"} Tvůrci filmu
+            %li
+              %a#pro_kina_link.typeface-js{:href => "/pro_kina.html"} Pro kina
             %li
               %a#partneri_link.typeface-js{:href => "/partneri.html"} Partneři
           #music
@@ -69,4 +71,4 @@
           %h1
             %img{:src => "/images/bastardi-logo.png", :alt => "Film Bastardi", :title => "Film Bastardi"}
 
-    %a#audio{:href => "/bastardi_trailer_hudba.mp3"}
+    /%a#audio{:href => "/bastardi_trailer_hudba.mp3"}
