--- a/views/pro_kina.haml
+++ b/views/pro_kina.haml
@@ -19,3 +19,22 @@
 
 %h1 Pro kina
 
+#image_gallery.small
+  .photo
+    %a{:href => "/fotosky/fotos1.jpg", :rel => "fancy"}
+      %img{:src => "/fotosky/fotos1_small.jpg"}
+  .photo
+    %a{:href => "/fotosky/fotos2.jpg", :rel => "fancy"}
+      %img{:src => "/fotosky/fotos2_small.jpg"}
+  .photo
+    %a{:href => "/fotosky/fotos3.jpg", :rel => "fancy"}
+      %img{:src => "/fotosky/fotos3_small.jpg"}
+  .photo
+    %a{:href => "/fotosky/fotos4.jpg", :rel => "fancy"}
+      %img{:src => "/fotosky/fotos4_small.jpg"}
+  .photo
+    %a{:href => "/fotosky/fotos5.jpg", :rel => "fancy"}
+      %img{:src => "/fotosky/fotos5_small.jpg"}
+  .photo
+    %a{:href => "/fotosky/fotos6.jpg", :rel => "fancy"}
+      %img{:src => "/fotosky/fotos6_small.jpg"}
