Fix, old style hash

--- a/views/pro_kina.haml
+++ b/views/pro_kina.haml
@@ -38,3 +38,9 @@
   .photo
     %a{:href => "/fotosky/fotos6.jpg", :rel => "fancy"}
       %img{:src => "/fotosky/fotos6_small.jpg"}
+
+%a{:href => 'fotesky.zip'} Distribuční fotky
+%br
+%a{:href => 'distribucni_list.pdf'} Distribuční list
+%br
+%a{:href => 'ftp://bastardi:bastardi3@ftp.avion.net'} Trailer
