Added actors photos, added some photos

--- a/views/pro_kina.haml
+++ b/views/pro_kina.haml
@@ -44,3 +44,5 @@
 %a{:href => 'distribucni_list.pdf'} Distribuční list
 %br
 %a{:href => 'ftp://bastardi:bastardi3@ftp.avion.net'} Trailer
+%br
+%a{:href => 'protiskfotky.zip'} Fotografie pro tisk
