New analytics code, add music, add Zavrel photo

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -71,4 +71,4 @@
           %h1
             %img{:src => "/images/bastardi-logo.png", :alt => "Film Bastardi", :title => "Film Bastardi"}
 
-    /%a#audio{:href => "/bastardi_trailer_hudba.mp3"}
+    %a#audio{:href => "/bastardi_hudba.mp3"}
