--- a/views/layout.haml
+++ b/views/layout.haml
@@ -70,5 +70,9 @@
         #logo
           %h1
             %img{:src => "/images/bastardi-logo.png", :alt => "Film Bastardi", :title => "Film Bastardi"}
+        #count_down
+          Do premiéry zbývá:
+          %br
+          %script{:language => "JavaScript", :src => "http://scripts.hashemian.com/js/countdown.js"}
 
     %a#audio{:href => "/bastardi_hudba.mp3"}
