Fix Topfer description

--- a/views/herci.haml
+++ b/views/herci.haml
@@ -62,43 +62,43 @@
   #Magnusek
     %h2 Tomáš Magnusek
     %p Představitel hlavního hrdiny učitele Majera z Bastardů připravuje na příští rok hororový thriller Věznice natáčený ve středních čechách.
-  
+
   #Svobodova
     %h2 Ilona Svobodová
     %p Herečka, kterou znají všichni jako Jitku Farskou z ulice hraje matku sourozenců Majerových.
-  
+
   #Preucil
     %h2 Jan Přeučil
     %p Jak je možné, že školník z jedničky a ze dvojky hraje v trojce? Uvidíte v kinech.
-  
+
   #Obermaierova
     %h2 Jaroslava Obermaierová
     %p Uklízečka Míla v trojce stále více komentuje chod školy a dokonce jde do tříd.
-  
+
   #Brozova
     %h2 Kateřina Brožová
     %p Nádherná Kateřina Brožová se stává klíčovou hráčkou ve městě a rozhoduje se, jak se k Majerovi zachová.
-  
+
   #Zavrel
     %h2 Vlastimil Zavřel
     %p Valšík z Ordinace v růžové zahradě se stává novým ředitelem školy a začínají se dít věci.
-  
+
   #Triska
     %h2 Jan Tříska
     %p Legendární herec (Igor Hnízdo z Obecné školy) hraje Majerova advokáta.
-  
+
   #Censky
     %h2 Jan Čenský
     %p Na místo Martina Dejdara nastupuje Jan Čenský, jak se on postaví k Tomáši Majerovi.
-  
+
   #Hrusinsky
     %h2 Rudolf Hrušínský
     %p Pešek z Ulice si zahrál soudce, který soudí vraha tří žáků Majera.
-  
+
   #Topfer
     %h2 Tomáš Töpfer
-    %p Slavný Arazím z Četnických Humoresek hraje otce Tomáše Majera
-  
+    %p Slavný Arazím z Četnických Humoresek hraje otce Tomáše Majera.
+
   #Dolansky
     %h2 David Dolanský, Patrik Koutný, Ondřej Semerák
     %p Čekali jste na ně a oni se vrátili. Těšte se, co zase vyvedou.
@@ -106,4 +106,4 @@
   #dalsi
     %h2 Dále hrají
     %p Michal Milbauer, Jiří Krampol, Kateřina Janečková, Ivan Vyskočil, Josef Deméter, Nina Divíšková, Valentina Thielová, Eva Hrušková, Martin Adámek, Dominik Haluška, Carmen Mayerová a Pavel Landovský.
-  
+
