Open partner in new page, added two partners

--- a/views/partneri.haml
+++ b/views/partneri.haml
@@ -7,43 +7,47 @@
 %h2.partner_section Partneři
 %ul.partners
   %li
-    %a{:href => 'http://www.motelskalka.cz'} Motel Skalka
+    %a{:target => '_blank', :href => 'http://www.klenotyaurum.cz'} Klenoty Aurum
   %li
-    %a{:href => 'http://www.gurmania-pruhonice.cz'} Restaurace Gurmania
+    %a{:target => '_blank', :href => 'http://www.motelskalka.cz'} Motel Skalka
   %li
-    %a{:href => 'http://www.mandisan.cz'} Mandisan
+    %a{:target => '_blank', :href => 'http://www.gurmania-pruhonice.cz'} Restaurace Gurmania
   %li
-    %a{:href => 'http://www.penzion-klidek.cz'} Penzion Klídek
+    %a{:target => '_blank', :href => 'http://www.mandisan.cz'} Mandisan
   %li
-    %a{:href => 'http://www.eurona.cz'} Eurona, s r. o.
+    %a{:target => '_blank', :href => 'http://www.penzion-klidek.cz'} Penzion Klídek
   %li
-    %a{:href => '#'} Zahradnictví Roušar
+    %a{:target => '_blank', :href => 'http://www.eurona.cz'} Eurona, s r. o.
   %li
-    %a{:href => 'http://www.dentimed.cz'} Dentimed, s. r. o.
+    %a{:target => '_blank', :href => '#'} Zahradnictví Roušar
   %li
-    %a{:href => 'http://www.rpvl.cz'} Papírnictví Šubert, s. r. o. Náchod
+    %a{:target => '_blank', :href => 'http://www.dentimed.cz'} Dentimed, s. r. o.
   %li
-    %a{:href => 'http://www.peko-pekarna.cz'} PEKO spol. s r. o.
+    %a{:target => '_blank', :href => 'http://www.rpvl.cz'} Papírnictví Šubert, s. r. o. Náchod
   %li
-    %a{:href => '#'} Řeznictví a uzenářství Vítek
+    %a{:target => '_blank', :href => 'http://www.peko-pekarna.cz'} PEKO spol. s r. o.
   %li
-    %a{:href => 'http://www.promareha.cz'} Proma Reha s. r. o.
+    %a{:target => '_blank', :href => '#'} Řeznictví a uzenářství Vítek
+  %li
+    %a{:target => '_blank', :href => 'http://www.promareha.cz'} Proma Reha s. r. o.
 %ul.partners
   %li
-    %a{:href => 'http://www.cdsnachod.cz'} CDS Náchod s. r. o., Náchod
+    %a{:target => '_blank', :href => 'http://www.dodavky.com'} Dodávky.com
   %li
-    %a{:href => 'http://www.hsflamingo.cz'} HS Flamingo s. r. o.
+    %a{:target => '_blank', :href => 'http://www.cdsnachod.cz'} CDS Náchod s. r. o., Náchod
   %li
-    %a{:href => 'http://www.svetluska.cz'} Světluška, s r. o.
+    %a{:target => '_blank', :href => 'http://www.hsflamingo.cz'} HS Flamingo s. r. o.
   %li
-    %a{:href => 'http://firma.kofola.cz'} Kofola a. s.
+    %a{:target => '_blank', :href => 'http://www.svetluska.cz'} Světluška, s r. o.
   %li
-    %a{:href => 'http://www.umago.cz'} Ubytování v soukromí na samotě – Milan Magnusek
+    %a{:target => '_blank', :href => 'http://firma.kofola.cz'} Kofola a. s.
   %li
-    %a{:href => '#'} Nadační fond Ing. Petra Pakosty
+    %a{:target => '_blank', :href => 'http://www.umago.cz'} Ubytování v soukromí na samotě – Milan Magnusek
   %li
-    %a{:href => '#'} Poslankyně Soňa Marková
+    %a{:target => '_blank', :href => '#'} Nadační fond Ing. Petra Pakosty
   %li
-    %a{:href => '#'} Šárka a Jan Birke
+    %a{:target => '_blank', :href => '#'} Poslankyně Soňa Marková
   %li
-    %a{:href => '#'} Železářství Soukup
+    %a{:target => '_blank', :href => '#'} Šárka a Jan Birke
+  %li
+    %a{:target => '_blank', :href => '#'} Železářství Soukup
