Added partner Haspl

--- a/views/partneri.haml
+++ b/views/partneri.haml
@@ -38,6 +38,8 @@
   %li
     %a{:target => '_blank', :href => 'http://www.hsflamingo.cz'} HS Flamingo s. r. o.
   %li
+    %a{:target => '_blank', :href => 'http://www.haspl.cz'} Hašpl a. s.
+  %li
     %a{:target => '_blank', :href => 'http://www.svetluska.cz'} Světluška, s r. o.
   %li
     %a{:target => '_blank', :href => 'http://firma.kofola.cz'} Kofola a. s.
