Autoplay trailer, new photos z nataceni

--- a/views/z_nataceni.haml
+++ b/views/z_nataceni.haml
@@ -33,3 +33,9 @@
   .photo
     %a{:href => "/z_nataceni/foto_06.jpg", :rel => "fancy"}
       %img{:src => "/z_nataceni/foto_06_small.jpg"}
+  .photo
+    %a{:href => "/z_nataceni/foto_07.jpg", :rel => "fancy"}
+      %img{:src => "/z_nataceni/foto_07_small.jpg"}
+  .photo
+    %a{:href => "/z_nataceni/foto_08.jpg", :rel => "fancy"}
+      %img{:src => "/z_nataceni/foto_08_small.jpg"}
