--- a/views/video.erb
+++ b/views/video.erb
@@ -1,1 +1,1 @@
-<iframe width="640" height="360" src="http://www.youtube.com/embed/hOugD09sAYQ" frameborder="0" allowfullscreen></iframe>
+<iframe width="640" height="360" src="http://www.youtube.com/embed/hOugD09sAYQ?autoplay=1" frameborder="0" allowfullscreen></iframe>
