Change www of subert papirnictvi

--- a/views/partneri.haml
+++ b/views/partneri.haml
@@ -23,7 +23,7 @@
   %li
     %a{:target => '_blank', :href => 'http://www.dentimed.cz'} Dentimed, s. r. o.
   %li
-    %a{:target => '_blank', :href => 'http://www.rpvl.cz'} Papírnictví Šubert, s. r. o. Náchod
+    %a{:target => '_blank', :href => 'http://www.stil.cz/papirnictvi-subert-spol-sro'} Papírnictví Šubert, s. r. o. Náchod
   %li
     %a{:target => '_blank', :href => 'http://www.peko-pekarna.cz'} PEKO spol. s r. o.
   %li
