Remove section creators, add sections projections

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -56,7 +56,7 @@
             %li
               %a#z_nataceni_link.typeface-js{:href => "/z_nataceni.html"} Z natáčení
             %li
-              %a#tvurci_link.typeface-js{:href => "/tvurci.html"} Tvůrci filmu
+              %a#promitani_link.typeface-js{:href => "/promitani.html"} Promítání
             %li
               %a#pro_kina_link.typeface-js{:href => "/pro_kina.html"} Pro kina
             %li
