Added new photo

--- a/views/z_nataceni.haml
+++ b/views/z_nataceni.haml
@@ -39,3 +39,33 @@
   .photo
     %a{:href => "/z_nataceni/foto_08.jpg", :rel => "fancy"}
       %img{:src => "/z_nataceni/foto_08_small.jpg"}
+  .photo
+    %a{:href => "/z_nataceni/foto_09.jpg", :rel => "fancy"}
+      %img{:src => "/z_nataceni/foto_09_small.jpg"}
+  .photo
+    %a{:href => "/z_nataceni/foto_10.jpg", :rel => "fancy"}
+      %img{:src => "/z_nataceni/foto_10_small.jpg"}
+  .photo
+    %a{:href => "/z_nataceni/foto_11.jpg", :rel => "fancy"}
+      %img{:src => "/z_nataceni/foto_11_small.jpg"}
+  .photo
+    %a{:href => "/z_nataceni/foto_12.jpg", :rel => "fancy"}
+      %img{:src => "/z_nataceni/foto_12_small.jpg"}
+  .photo
+    %a{:href => "/z_nataceni/foto_13.jpg", :rel => "fancy"}
+      %img{:src => "/z_nataceni/foto_13_small.jpg"}
+  .photo
+    %a{:href => "/z_nataceni/foto_14.jpg", :rel => "fancy"}
+      %img{:src => "/z_nataceni/foto_14_small.jpg"}
+  .photo
+    %a{:href => "/z_nataceni/foto_15.jpg", :rel => "fancy"}
+      %img{:src => "/z_nataceni/foto_15_small.jpg"}
+  .photo
+    %a{:href => "/z_nataceni/foto_16.jpg", :rel => "fancy"}
+      %img{:src => "/z_nataceni/foto_16_small.jpg"}
+  .photo
+    %a{:href => "/z_nataceni/foto_17.jpg", :rel => "fancy"}
+      %img{:src => "/z_nataceni/foto_17_small.jpg"}
+  .photo
+    %a{:href => "/z_nataceni/foto_18.jpg", :rel => "fancy"}
+      %img{:src => "/z_nataceni/foto_18_small.jpg"}
