Make clean project

--- a/views/herci.haml
+++ b/views/herci.haml
@@ -52,7 +52,7 @@
     %li
       %a{:href => "javascript:changeActor('Topfer');"} Tomáš Töpfer
     %li
-      %a{:href => "javascript:changeActor('dalsi');"} dále hrají
+      %a{:href => "javascript:changeActor('Dalsi');"} dále hrají
 
 %table#actorDetail
   %tr
@@ -103,7 +103,7 @@
     %h2 David Dolanský, Patrik Koutný, Ondřej Semerák
     %p Čekali jste na ně a oni se vrátili. Těšte se, co zase vyvedou.
 
-  #dalsi
+  #Dalsi
     %h2 Dále hrají
     %p Michal Milbauer, Jiří Krampol, Kateřina Janečková, Ivan Vyskočil, Josef Deméter, Nina Divíšková, Valentina Thielová, Eva Hrušková, Martin Adámek, Dominik Haluška, Carmen Mayerová a Pavel Landovský.
 
