--- a/views/partneri.haml
+++ b/views/partneri.haml
@@ -53,3 +53,5 @@
     %a{:target => '_blank', :href => '#'} Šárka a Jan Birke
   %li
     %a{:target => '_blank', :href => '#'} Železářství Soukup
+  %li
+    %a{:target => '_blank', :href => 'http://www.vaskamelot.cz'} Východočeský Kamelot
